--- a/kubernetes-controllers/paymentservice-deployment.yaml
+++ b/kubernetes-controllers/paymentservice-deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hipster-frontend
+  name: paymentservice
   labels:
-    app: hipster-frontend
+    app: paymentservice
 spec:
   # modify replicas according to your case
   replicas: 3
   selector:
     matchLabels:
-      app: hipster-frontend
+      app: paymentservice
   template:
     metadata:
       labels:
-        app: hipster-frontend
+        app: paymentservice
     spec:
       containers:
       - name: server
