--- a/kubernetes-operators/deploy/crd.yml
+++ b/kubernetes-operators/deploy/crd.yml
@@ -9,17 +9,17 @@ spec:
     - name: v1
       served: true      # Будет ли обслуживаться API-сервером данная версия
       storage: true     # Фиксирует  версию описания, которая будет сохраняться в etcd
-      schema:
+      schema:                      # Добавил этот кусок из шаблона https://kubernetes.io/docs/tasks/extend-kubernetes/custom-resources/custom-resource-definitions/
         openAPIV3Schema:
           type: object
           properties:
             apiVersion:
-              type: string
+              type: string # Тип данных поля ApiVersion
             kind:
-              type: string
+              type: string # Тип данных поля kind
             metadata:
-              type: object
-              properties:
+              type: object # Тип поля metadata
+              properties: # Доступные параметры и их тип данных поля metadata (словарь)
                 name:
                   type: string
             spec:
